# angelsuite-installer

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  index.html  package.json  styles.css
.github/workflows/: build.yaml  check-version-bumped.yaml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gzip.rs  install.rs  lib.rs  main.rs  manifest.rs
