[package]
name = "angelsuite-installer-ui"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2021"
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

[workspace]
members = ["src-tauri"]

[workspace.package]
version = "0.7.1-7"
publish = false
license = "GPL-3.0"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "An installer utility for managing Angelsuite tools."
