[package]
name = "angelsuite-installer"
version.workspace = true
description.workspace = true
authors.workspace = true
edition = "2021"
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "angelsuite_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getset = "0.1.3"
semver = { version = "1.0.23", features = ["serde"] }
reqwest = "0.12.9"
zip-extract = "0.2.1"
dirs = "5.0.1"
tar = "0.4.43"
flate2 = "1.0.35"
dotenvy = "0.15.7"
fern = "0.7.0"
log = "0.4.22"
chrono = "0.4.39"
tempfile = "3.14.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

