[package]
name = "angelsuite-installer"
version.workspace = true
description.workspace = true
authors.workspace = true
edition = "2021"
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "angelsuite_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getset = "0.1.3"
semver = { version = "1.0.23", features = ["serde"] }
reqwest = "0.12.9"
zip-extract = "0.2.1"
dirs = "6.0.0"
tar = "0.4.43"
flate2 = "1.0.35"
dotenvy = "0.15.7"
tempfile = "3.14.0"
tracing = "0.1.41"
tracing-subscriber-multi = "0.1.0"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

